--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,40 @@ code {
 .tile
 {
   display: inline-block;
+  box-sizing: border-box;
   border: 1px solid gray;
+}
+.tile.m0
+{
+  width: calc(100% /  2);
+}
+.tile.m1
+{
+  width: calc(100% /  5);
+}
+.tile.m2
+{
+  width: calc(100% /  8);
+}
+.tile.m3
+{
+  width: calc(100% / 11);
+}
+.tile.m4
+{
+  width: calc(100% / 14);
+}
+.tile.m5
+{
+  width: calc(100% / 17);
+}
+.tile .tile-index
+{
+  color: gray;
+  font-size: smaller;
+}
+.tile .tile-value
+{
+  font-weight: bold;
+  font-size: larger;
 }
