--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+:root
+{
+  --dark-color: rgb(2, 172, 172);
+  --light-color: rgb(140, 248, 248);
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: '源ノ角ゴシック', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -31,61 +36,102 @@ div.tile > img
   position: absolute;
   object-fit: contain;
 }
-.tile.m0
+.start-button
 {
-  width: calc(100% /  2);
+  border: 1px solid var(--dark-color);
+  color: var(--dark-color);
+  font-weight: bold;
+  box-sizing: border-box;
+  text-align: center;
+  width: 24em;
 }
-.tile.m1
+
+fieldset
 {
-  width: calc(100% /  5);
+  margin-top: 0.5ex;
+  margin-bottom: 0.5ex;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  border: none;
+  padding-block-start: 0;
+  padding-block-end: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
 }
-.tile.m2
+.transparent
 {
-  width: calc(100% /  8);
+  opacity: 0;
 }
-.tile.m3
+.radio-label
 {
-  width: calc(100% / 11);
+  display: inline-block;
+  box-sizing: border-box;
+  padding-left: 0.4em;
+  width: 6em;
 }
-.tile.m4
+fieldset > label
 {
-  width: calc(100% / 14);
+  display: inline-block;
 }
-.tile.m5
+fieldset.hand-length > label
 {
-  width: calc(100% / 17);
+  width: 3em;
 }
-.tile .tile-index
+fieldset.tile-style > label
+{
+  width: 9em;
+}
+fieldset.tile-suit > label,
+fieldset.allow-pairs > label
+{
+  width: 6em;
+}
+label[for=time-before-draw], label[for=time-before-sort]
+{
+  box-sizing: border-box;
+  padding-left: 0.4em;
+  width: 9em;
+}
+input[type="range"]
+{
+  -webkit-appearance: none;
+  font-size: 100%;
+  height: 0.2em;
+  border-radius: 0.1em;
+  background-color: var(--light-color);
+  width: 12em;
+  margin: 0;
+  vertical-align: middle;
+}
+input[type="range"]::-webkit-slider-thumb
+{
+  -webkit-appearance: none;
+  background: var(--dark-color);
+  height: 0.6em;
+  width: 0.6em;
+  border-radius: 50%;
+}
+input[type="range"] + output
+{
+  width: 3em;
+}
+fieldset > input + label
+{
+  box-sizing: border-box;
+  border: 0.5px solid white;
+  font-weight: bold;
+  text-align: center;
+}
+fieldset > input:not(:checked) + label
+{
+  background-color: var(--light-color);
+}
+fieldset > input:checked + label
+{
+  background-color: var(--dark-color);
+  color: white;
+}
+fieldset > input[type="radio"]
 {
   display: none;
-  color: gray;
-  font-size: smaller;
-}
-.tile .tile-value
-{
-  font-family: 'GL-MahjongTile-Clr';
-}
-.tile.m0 .tile-value
-{
-  font-size: 76vw;
-}
-.tile.m1 .tile-value
-{
-  font-size: 31vw;
-}
-.tile.m2 .tile-value
-{
-  font-size: 18vw;
-}
-.tile.m3 .tile-value
-{
-  font-size: 12vw;
-}
-.tile.m4 .tile-value
-{
-  font-size: 11vw;
-}
-.tile.m5 .tile-value
-{
-  font-size: 8vw;
 }
